doclever/doclever-dc.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: doclever
  selector:
    role: doclever
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: doclever
    spec:
      containers:
      - name: doclever
        image: ydjjing/mock:latest
        ports:
        - containerPort: 10000 
        volumeMounts:
        - name: doclever-persistent-storage
          mountPath: /root/DOClever/data
      volumes:
      - name: doclever-persistent-storage
        persistentVolumeClaim:
          claimName: mock-doclever
