doclever/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    name: mongo
spec:
  selector:
    role: mongo
  type: NodePort
  ports:
  - port: 27017
    targetPort: 27017
