doclever/mock-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: mock-ingress
  namespace: mock
spec:
  rules:
  - host: www.xxx.com
    http:
      paths:
      - backend:
          serviceName: doclever
          servicePort: 10000
        path: /doc
